--- a/StanLeeSlackBot.Web/StanLeeSlackBot.Web.csproj
+++ b/StanLeeSlackBot.Web/StanLeeSlackBot.Web.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNet.Security.OAuth.Slack" Version="3.0.0" />
     <PackageReference Include="BabouExtensions" Version="1.2.35" />
     <PackageReference Include="BabouExtensions.AspNetCore" Version="1.2.35" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.12.0" />
