--- a/StanLeeSlackBot.Web/StanLeeSlackBot.Web.csproj
+++ b/StanLeeSlackBot.Web/StanLeeSlackBot.Web.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AspNet.Security.OAuth.Slack" Version="3.0.0" />
     <PackageReference Include="BabouExtensions" Version="1.2.35" />
     <PackageReference Include="BabouExtensions.AspNetCore" Version="1.2.35" />
+    <PackageReference Include="BabouMail.MailGun" Version="1.1.7" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.AzureKeyVault" Version="3.0.0" />
