Added methods for users to ask for help and support

--- a/StanLeeSlackBot.Web/appsettings.Development.json
+++ b/StanLeeSlackBot.Web/appsettings.Development.json
@@ -6,7 +6,8 @@
                 "Microsoft": "Warning",
                 "StanLeeSlackBot": "Debug",
                 "System": "Warning",
-                "Serilog": "Warning"
+                "Serilog": "Warning",
+                "SlackBotNet.SlackBot": "Warning"
             }
         }
     }
