--- a/StanLeeSlackBot.Web/appsettings.json
+++ b/StanLeeSlackBot.Web/appsettings.json
@@ -4,9 +4,10 @@
             "Default": "Debug",
             "Override": {
                 "Microsoft": "Warning",
-                "AJT": "Debug",
+                "StanLeeSlackBot": "Debug",
                 "System": "Warning",
-                "Serilog": "Warning"
+                "Serilog": "Warning",
+                "SlackBotNet.SlackBot": "Warning" 
             }
         }
     },
