--- a/StanLeeBot.Web/appsettings.Development.json
+++ b/StanLeeBot.Web/appsettings.Development.json
@@ -4,7 +4,7 @@
             "Default": "Debug",
             "Override": {
                 "Microsoft": "Warning",
-                "StanLeeSlackBot": "Debug",
+                "StanLeeBot": "Debug",
                 "System": "Warning",
                 "Serilog": "Warning",
                 "SlackBotNet.SlackBot": "Warning"
