--- a/StanLeeBot.Web/StanLeeBot.Web.csproj
+++ b/StanLeeBot.Web/StanLeeBot.Web.csproj
@@ -29,8 +29,13 @@
     <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="3.0.4" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.1.3" />
-    <PackageReference Include="SlackBotMessages" Version="2.0.1" />
     <PackageReference Include="SlackBotNet" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="SlackBotMessages">
+      <HintPath>..\TempDLLs\SlackBotMessages.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 
