--- a/StanLeeBot.Web/StanLeeBot.Web.csproj
+++ b/StanLeeBot.Web/StanLeeBot.Web.csproj
@@ -6,10 +6,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="bundleconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="bundleconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AJT.Defaults.Serilog" Version="1.0.1" />
     <PackageReference Include="AspNet.Security.OAuth.Slack" Version="3.0.0" />
-    <PackageReference Include="BabouExtensions" Version="1.2.35" />
-    <PackageReference Include="BabouExtensions.AspNetCore" Version="1.2.35" />
+    <PackageReference Include="BabouExtensions" Version="1.2.41" />
+    <PackageReference Include="BabouExtensions.AspNetCore" Version="1.2.41" />
     <PackageReference Include="BabouMail.MailGun" Version="1.1.7" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="3.0.0" />
@@ -30,6 +38,7 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.1.3" />
     <PackageReference Include="SlackBotNet" Version="1.0.0" />
+    <PackageReference Include="Telegram.Bot" Version="15.2.0" />
   </ItemGroup>
 
   <ItemGroup>
