Made little progress on trying to create a FB bot using Google AI

--- a/StanLeeBot.Web/StanLeeBot.Web.csproj
+++ b/StanLeeBot.Web/StanLeeBot.Web.csproj
@@ -15,9 +15,10 @@
 
   <ItemGroup>
     <PackageReference Include="AJT.Defaults.Serilog" Version="1.0.1" />
-    <PackageReference Include="BabouExtensions" Version="1.2.41" />
+    <PackageReference Include="BabouExtensions" Version="1.2.43" />
     <PackageReference Include="BabouExtensions.AspNetCore" Version="1.2.41" />
     <PackageReference Include="BabouMail.MailGun" Version="1.1.7" />
+    <PackageReference Include="Google.Cloud.Dialogflow.V2" Version="1.2.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.AzureKeyVault" Version="3.0.0" />
