Added more logging, mostly for debugging, and updated Production appSettings to log only Info levels or higher

--- a/StanLeeBot.Web/appsettings.Production.json
+++ b/StanLeeBot.Web/appsettings.Production.json
@@ -4,7 +4,7 @@
             "Default": "Warning",
             "Override": {
                 "Microsoft": "Warning",
-                "StanLeeBot": "Debug",
+                "StanLeeBot": "Information",
                 "System": "Warning",
                 "Serilog": "Warning",
                 "SlackBotNet.SlackBot": "Warning"
