--- a/StanLeeBot.Web/Properties/launchSettings.json
+++ b/StanLeeBot.Web/Properties/launchSettings.json
@@ -13,15 +13,16 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:44347/"
     },
-    "StanLeeSlackBot.Web": {
+    "StanLeeBot.Web": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:44347/"
     }
   }
 }
